[fantasy] Languages now a part of the skills.

--- a/latex/fantasy/skills.tex
+++ b/latex/fantasy/skills.tex
@@ -1,41 +1,119 @@
 \chapter{Умения}
-\section{Общуване}
-Лъжене (Харизма)                  \\
-Сплашване (Харизма)               \\
-Изтезаване/Разпитване (Харизма)   \\
-Емпатия (Харизма)                 \\
-Четене по устните (Харизма)       \\
-Просене (Харизма)                  \\
+\section{Боравене}
+Ръкопашните умения за ползват за удряне и париране, за подбор на качествено оръжие и за полевата му поддръжка.
+Уменията с обсадни оръжия се ползват за сглобяване, разглобяване и командване на стрелбата. 
+\subsection{Ръкопашни}
+\Tree[ .Невъоръжен [ .Борба ] [ .Удари ] [ .{Импровизирани оръжия} ] ]
+\Tree[ .Фехтовка [ .{Нож, Кама} [ .Гладиус ] ] [ .{Едноръчен меч} [ .Рапира ] [ .Сабя ] ] [ .{Дълъг меч} [ .Цвайхендер ] [ .Есток ]  ]  ]
+\vskip 0.5cm
+\Tree[ .Копие [ .Тояга ] [ .{Късо копие} ] [ .{Дълго копие} ] [ .Алебарда ] [ .Пика ] ]
+\Tree[ .Топор [ .Брадвичка ] [ .{Датска брадва} ] [ .Бардич ] ]
+\hskip 1cm
+\Tree[ .Чук [ .Тояжка ] [ .{Боен чук} ] [ .Боздуган ] [ .{Двуръчен боздуган} ] ]
 
-\section{Академични}
-Език(Ум) - староендивалски, гоблински, северно върколажко кралство и т.н.  \\
-Наука(Ум) - алхимия, астрономия, геометрия, оптика и т.н.  \\
-Тактика (Ум)                      \\
+\subsection{Метателни}
+\Tree[ .{Метателен нож} [ .{Метателна брадва} ] ]
+\Tree[ .{Метателно копие} ]
 
-\section{Схватки}
-Оръжие(Ловкост) - нож, меч, брадва, дълъг меч, лък и т.н.  \\
-Военна машина* (Ум)               \\
+\subsection{Стрелящи}
+\Tree[ .Балистика [ .Лък ] [ .Арбалет ] [ .Прашка ] [ .Балиста [ .Катапулт [ .Требучет ] ] ] ]
 
-\section{Придвижване}
-Плуване (Сила)                    \\
-Кaтерене (Сила)                   \\
+\section{Езици}
+\subsection{Човешки езици}
+\begin{itemize}[topsep=-0cm, partopsep=0cm, parsep=0cm, itemsep=0cm]
+\item{Терейски - човешката инвазия от юг донесла и езика си}
+\item{Каланорски - същият човешки език, еволюирал в друга среда}
+\item{Спернт - изкуствен език, базиран на човешкия; лесен за учене; говорен в Добра надежда}
+\item{Дабарски - сищия този език, в оригиналната форма когато пристигнал на Ендивал}
+\item{Злотски - езикът на местното племе около Таури - родени търговци, премесен с Дабарски}
+\end{itemize}
+\Tree[ .Дабарски [ .Терейски [ .Спернт ] ] [ .Каланорски ] [ .Злотски ] ]
 
-\section{Занаяти}
-Билкарсто (Ум)                    \\
-Ковачество(С)                     \\
-Грънчарство(Л)                    \\
-Изработка на лъкове(Л)            \\
-Тъкане, шиене и бродиране(Л)      \\
+\subsection{Здрачнически езици}
+\begin{itemize}[topsep=-0cm, partopsep=0cm, parsep=0cm, itemsep=0cm]
+\item{Здрач - говорен в Хайсея}
+\item{Староздрачнически - един от езиците по старите земи на здрачниците; говорен само от някои}
+\item{Нов здрач - език изцяло със жестове}
+\item{Хаски - друг популярен търговски език}
+\end{itemize}
+\Tree[ .Староздрачнически [ .Здрач [ .Хаски ] ] [ .{Нов здрач} ] ]
 
-%\section{Епични провали}
-%Ако при мятане на д6* се падне -5 или +6, се мята отново.
-%Ако случайно се падне същото число, то се взема предивд и се продължава с мятането.
-%Ако крайният резултат е <0, имаме епичен провал, честито!  \\
+\subsection{Върколашки езици}
+\begin{itemize}[topsep=-0cm, partopsep=0cm, parsep=0cm, itemsep=0cm]
+\item{Фелтеарски}
+\item{Лиднарски}
+\item{Креолски}
+\item{Грефрамски}
+\item{Грефраски}
+\item{Старовърколашки}
+\item{Старобурхски}
+\item{Бурхски}
+\item{Третски - общ език между нежду наемници и други паравоенни организации из Ендивал}
+\end{itemize}
+\Tree[ .Старовърколашки [ .Старобурхски [ .Бурхски [ .Третски ] ] ] [ .Грефрамски [ .Фелтеарски ] [ .Лиднарски ] [ .Креолски ] [ .Грефкраски ]  ] ]
 
-%При атака с оръжие           \\
-%- да го изтърве              \\
-%- да се сепъне               \\
-%- да се наръга               \\
-%- да се счупи                \\
-%- да удари някого другиго    \\
-%- ми нищо не се случва       \\
+\subsection{Елфически езици}
+\begin{itemize}[topsep=-0cm, partopsep=0cm, parsep=0cm, itemsep=0cm]
+\item{Староелфически}
+\item{Елфически}
+\item{Даенлински}
+\end{itemize}
+\Tree[ .Староелфически [ .Елфически ] [ .Даенлински ]  ]
+
+\subsection{Джуджешки езици}
+\begin{itemize}[topsep=-0cm, partopsep=0cm, parsep=0cm, itemsep=0cm]
+\item{Храфкромдретппелски}
+\item{Голмхемрумхерски}
+\item{Грумдерхентлестонски}
+\item{Краунаумхески}
+\item{Църковен джудежешки}
+\item{Староджуджешки}
+\end{itemize}
+\Tree[ .Староджуджешки [ .{Църковен джуджешки} ] [ .Голмхемрумхерски [ .Храфкромдретппелски ] [ .Грумдерхентлестонски ] [ .Краутнаумхески ] ] ]
+
+\subsection{Други езици}
+\begin{itemize}[topsep=-0cm, partopsep=0cm, parsep=0cm, itemsep=0cm]
+\item{Латински - преоткрит по необходимост заради количеството книги, донесени с човешката инвазия}
+\end{itemize}
+
+
+%\section{Общуване}
+%Лъжене (Харизма)                  \\
+%Сплашване (Харизма)               \\
+%Изтезаване/Разпитване (Харизма)   \\
+%Емпатия (Харизма)                 \\
+%Четене по устните (Харизма)       \\
+%Просене (Харизма)                  \\
+%
+%\section{Академични}
+%Език(Ум) - староендивалски, гоблински, северно върколажко кралство и т.н.  \\
+%Наука(Ум) - алхимия, астрономия, геометрия, оптика и т.н.  \\
+%Тактика (Ум)                      \\
+%
+%\section{Схватки}
+%Оръжие(Ловкост) - нож, меч, брадва, дълъг меч, лък и т.н.  \\
+%Военна машина* (Ум)               \\
+%
+%\section{Придвижване}
+%Плуване (Сила)                    \\
+%Кaтерене (Сила)                   \\
+%
+%\section{Занаяти}
+%Билкарсто (Ум)                    \\
+%Ковачество(С)                     \\
+%Грънчарство(Л)                    \\
+%Изработка на лъкове(Л)            \\
+%Тъкане, шиене и бродиране(Л)      \\
+%
+%%\section{Епични провали}
+%%Ако при мятане на д6* се падне %5 или +6, се мята отново.
+%%Ако случайно се падне същото число, то се взема предивд и се продължава с мятането.
+%%Ако крайният резултат е <0, имаме епичен провал, честито!  \\
+%
+%%При атака с оръжие           \\
+%%- да го изтърве              \\
+%%- да се сепъне               \\
+%%- да се наръга               \\
+%%- да се счупи                \\
+%%- да удари някого другиго    \\
+%%- ми нищо не се случва       \\
