--- a/latex/preamble.tex
+++ b/latex/preamble.tex
@@ -74,7 +74,7 @@
 \begin{multicols}{2}
   \noindent \textbf{#2} \\
   Покритие: #3  \\
-  Абсорбация: #4  \\
+  Пазене: #4  \\
   Свойства: #5  \\
   Маса: #6  \\
   Стойност: #7  \\
