--- a/latex/fantasy/skills.tex
+++ b/latex/fantasy/skills.tex
@@ -89,19 +89,44 @@
 
 За всяко настоящо поддържано заклинание от същата школа магия, умението се намаля с 5 точки временно.
 
-\textbf{Жизнена енергия / Некромантия / Отвъд}
+Комбинирани заклинания се изричат с най-ниското от уменията във всички школи, но поддържането им отнема точки от всички школи.
+
+\rowcolors{1}{white}{lightgray}
+\begin{tabular}{c | c}
+Обсег         & Модификация  \\
+Ум * 2, м     & -  \\
+Ум * 200, м   & -5  \\
+Ум * 20, км   & -10  \\
+Ум * 2000, км & -15  \\
+\end{tabular}
+\vspace{1cm}
+
+\textbf{Отвъд}
 \begin{itemize*}
-  \item{укротяване на звяр - 5}
-  \item{усещане за немъртви - 5}
-  \item{лекуване (умение + d6* ЖТ) - 5}
+  \item{усещане на немъртви - 5}
   \item{изтляване - съществото умира след месец  докато се поддържа магията - 10}
-  \item{скелетен слуга - <умение + д6*> по показатели, следва вербални команди - 10}
-  \item{убиване - <умение> с/у <сила на опонента> - 15}
-  \item{възкресяване на тяло - 20}
-  \item{възкресяване по спомен - 25}
-  \item{възкресяване по описание - 30}
+  \item{призоваване на призрак за въпроси - 10}
+  \item{връщане на душата в тяло - за възкресяване или вдигане на немъртъв слуга - 10}
+  \item{немъртър слуга - успех от хвърлянето по показатели, следва вербални команди - 10}
   \item{превръщане в лич - 30}
 \end{itemize*}
+
+
+\textbf{Плът}
+\begin{itemize*}
+  \item{лекуване на рана - 5 + размер на раната}
+  \item{убиване - 15 + Сила на опонента}
+  \item{зараза - 10}
+\end{itemize*}
+
+
+\textbf{Гадаене}
+\begin{itemize*}
+  \item{лекуване на рана - 5 + размер на раната}
+  \item{убиване - 15 + Сила на опонента}
+  \item{зараза - 10}
+\end{itemize*}
+
 
 \vspace{1cm}
 \textbf{Гадание / Пророчество (в пространството и времето)}
