[style] Fitted the combat system onto 6 pages.

--- a/latex/fantasy/titlepage.tex
+++ b/latex/fantasy/titlepage.tex
@@ -10,7 +10,7 @@
 \vfill
 
 % Bottom of the page.
-\footnotesize \today \normalsize
+\scriptsize \today \normalsize
 
 \end{center}
 \end{titlepage}
