--- a/latex/rules/combat.tex
+++ b/latex/rules/combat.tex
@@ -1,5 +1,5 @@
 \chapter{Бойна система}
-
+\begin{footnotesize}
 \section{Детайлност}
 В зависимост от сюжетните нужди, една схватка може да бъде описана в еднинствено изречение или на десетки страници.
 За това настоящата глава е организирана както следва.
@@ -69,6 +69,7 @@
 
 
 \section{Списък с правила}
+\begin{multicols}{2}
 \subsection{Автоматична стрелба}
 Автоматичните оръжия са способни да произведат повече от един изстрел за ход.
 Хвърлянето за атака е едно и броят изстрели се заявява предварително.
@@ -81,7 +82,6 @@
 Следващия ход нападателят има +5 на боравене.
 
 
-\begin{multicols}{2}
 \subsection{Боравене}
 Число, описващо колко вероятно е ръкопашна или далечна атака да достигне целта си.
 Равно е на умението с използвното оръжие.
@@ -100,6 +100,7 @@
 Ако се атакува само с едното оръжие няма наказания, разбира се.
 Щитовете не търпят -5 при пазене.
 \includegraphics[height=0.8\textheight]{naginata}~
+\end{multicols}
 
 
 \subsection{Дистанция}
@@ -127,7 +128,6 @@
 \subsection{Джаб}
 Това е бърза ръкопашна атака, която избягва откриване или дисбалансиране на себе си.
 Ползва (боравене+5), но причинява (Щ/2).
-\end{multicols}
 
 
 \subsection{Езда, Шофиране}
@@ -300,6 +300,7 @@
 Симптомите са незабавно безсъзнание докато причинителят не бъде отстранен.
 
 
+\begin{multicols}{2}
 \subsection{Стрелба по крайник}
 \rowcolors{1}{white}{lightgray}
 \begin{tabular}{l | l | l | l }
@@ -468,3 +469,5 @@
 %\subsection{Навесна стрелба}
 
 
+\end{multicols}
+\end{footnotesize}
