[fantasy] Minor touch on the races.

--- a/latex/fantasy/races.tex
+++ b/latex/fantasy/races.tex
@@ -12,7 +12,7 @@
 {1 - 10}{1 - 10}{1 - 10}{1 - 10}{няма}{няма}
 
 \race{Джудже}{2}
-{Местно население на Ендивал, което след притигането на хората се разединява на три, а после на четири, кралства.}
+{Местно население на Ендивал, което след пристигането на хората се разединява на три, а после на четири, кралства.}
 {6-15}{1-8}{1-12}{1-8}{Виждане в тъмнина}
 {
 Джуджешки език(У);
@@ -23,7 +23,7 @@
 }
 
 \race{Елф}{4}
-{Някога единственото население на Ендивал, сега са изтласкани до най-западните гори на континента.}
+{Първите жители на Ендивал, сега са изтласкани до най-западните гори на континента.}
 {1-8}{6-15}{1-15}{1-12}{Неспящ; Нестареещ}
 {
 Елфичеки език(У);
@@ -34,7 +34,7 @@
 }
 
 \race{Върколак}{3}
-{Създадени от Хазерот като по-съръшена раса от елфите. Войнствена раса.}
+{Създадени от Хазерот като по-съръшена раса от елфите.}
 {6-16}{1-10}{1-10}{1-10}{Силна имунна система}
 {
 Оцеляване в дивото(У);
