[fantasy] Created a tree of the spells.

--- a/latex/rules/overview.tex
+++ b/latex/rules/overview.tex
@@ -7,12 +7,12 @@
 
 \rowcolors{1}{white}{lightgray}
 \begin{tabular}{ p{2cm} | p{2cm} |  p{2cm} | p{2cm} | p{6cm} }
-Абстракция        & ръкопашен бой                & Стрелба                 & Магия       & Общуване      \\
-повлияване някому & боравене(Л)                  & боравене(Л)             & умение      & пазарене(цени, условия)(Х), молене(призоваване на съпричастност)(Х), принуждаване(сплашване, заповядване)  \\
-предпазване       & боравене(Л)                  & Ловкост, броня(С)       & показател   & емпария(разгадаване на подбуди)(Х), дисциплина(виздуржане на импулсивни решения), Сила(телесни трансформации), Ловкост(отбягване на проектили), Ум(видения), Харизма(внушения)  \\
-ниво на успех     & разлика(Л)                   & разлика(Л)              & разлика(Ум) & отношения(Х)  \\
-ниво на неуспех   & разлика(Л)                   & разлика(Л)              & разлика(Ум) & отношения(Х)  \\
-обсег             & по-дългото оръжие удря първо & от (Сила/2) до (Сила*2) & (Ум*2)      & Ум * 2 метра  \\
-собствен ресурс   & здраве(С)                    & здраве(С)               & здраве(С)   & отношения(Х)  \\
-вражески ресурс   & здраве(С)                    & здраве(С)               & -           & отношения(Х)  \\
+Абстракция        & ръкопашен бой                & Стрелба                 & Магия                & Общуване      \\
+повлияване някому & боравене(Л)                  & боравене(Л)             & умение(У)            & пазарене(цени, условия)(Х), молене(призоваване на съпричастност)(Х), принуждаване(сплашване, заповядване)  \\
+предпазване       & боравене(Л)                  & Ловкост, броня(С)       & показател            & емпария(разгадаване на подбуди)(Х), дисциплина(виздуржане на импулсивни решения), Сила(телесни трансформации), Ловкост(отбягване на проектили), Ум(видения), Харизма(внушения)  \\
+ниво на успех     & разлика(Л)                   & разлика(Л)              & разлика(У)           & отношения(Х)  \\
+ниво на неуспех   & разлика(Л)                   & разлика(Л)              & разлика(У)           & отношения(Х)  \\
+обсег             & по-дългото оръжие удря първо & от (Сила/2) до (Сила*2) & (Ум*2)               & Ум * 2 метра  \\
+собствен ресурс   & здраве(С)                    & здраве(С)               & здраве(С), умение(У) & отношения(Х)  \\
+вражески ресурс   & здраве(С)                    & здраве(С)               & -                    & отношения(Х)  \\
 \end{tabular}
