--- a/latex/fantasy/skills.tex
+++ b/latex/fantasy/skills.tex
@@ -87,7 +87,7 @@
 След това всеки хвърля срещу собственото парче трудност.
 Ако някой се провали, изричанеот се проваля и всеки търпи щети като от най-лошото хвърляне..
 
-За всяко настоящо поддържано заклинание от същата школа магия, умението се намаля с 5 точки временно.
+За всяко настоящо поддържано заклинание(отбелязани с *) от същата школа магия, умението се намаля с 5 точки временно.
 
 Комбинирани заклинания се изричат с най-ниското от уменията във всички школи, но поддържането им отнема точки от всички школи.
 
@@ -101,13 +101,54 @@
 \end{tabular}
 \vspace{1cm}
 
+
+%\vspace{1cm}
+\textbf{Гадание}
+\begin{itemize*}
+  \item{усещане позицията на предмет* - 0}
+  \item{научаване името на същество - 0}
+  \item{виждане на далеч* - 0}
+  \item{уцелване отвъд прикритие* - стрелбата е по-ниското от успеха на заклинанието или боравене + d* - 10}
+  \item{виждане през стени* - 10}
+  \item{виждане в тъмнина* - 10}
+  \item{виждане на отдалечена сцена* - 10}
+\end{itemize*}
+
+
+%\vspace{1cm}
+\textbf{Вятър}
+\begin{itemize*}
+  \item{мъгла* - 5}
+  \item{шепот* - гласът на магьосника, или с Актьорско майсторство друг глас, говори от избрано място - 10}
+\end{itemize*}
+
+
+%\vspace{1cm}
+\textbf{Огън}
+\begin{itemize*}
+  \item{запалване на много свещи - 0}
+  \item{факла* - пламъци над ръката на магьосника осветяват пътя - 0}
+  \item{запалване на дрехи* - 5}
+  \item{предпазване от жега* - 5}
+  \item{палене на колиба* - 10}
+  \item{запалване на човек* - 10}
+  \item{защита от огън* - 10}
+  \item{огнено кълбо - <умение> радиус - 15}
+  \item{запалване на тълпа* - 15}
+  \item{защито от огън на тълпа* - 15}
+  \item{запалване на град* - 20}
+  \item{защита от огън на град* - 20}
+\end{itemize*}
+
+
 \textbf{Отвъд}
 \begin{itemize*}
-  \item{усещане на немъртви - 5}
-  \item{изтляване - съществото умира след месец  докато се поддържа магията - 10}
-  \item{призоваване на призрак за въпроси - 10}
-  \item{връщане на душата в тяло - за възкресяване или вдигане на немъртъв слуга - 10}
-  \item{немъртър слуга - успех от хвърлянето по показатели, следва вербални команди - 10}
+  \item{усещане на немъртви* - 0}
+  \item{изтляване* - съществото залинява и умира за месец - 10}
+  \item{призоваване на душа за въпроси* - 10}
+  \item{връщане на душата в тяло* - за възкресяване или вдигане на немъртъв слуга - 10}
+  \item{немъртър слуга* - успех от хвърлянето по показатели, следва вербални команди, пленява душата - 15}
+  \item{принудително освобождаване на душа от тяло - 20 + Ум на опонента}
   \item{превръщане в лич - 30}
 \end{itemize*}
 
@@ -117,59 +158,34 @@
   \item{лекуване на рана - 5 + размер на раната}
   \item{убиване - 15 + Сила на опонента}
   \item{зараза - 10}
+  \item{преобразяване - омагьосаният има нов външен вид от същата раса и пол - 15}
 \end{itemize*}
 
 
-\textbf{Гадаене}
+\textbf{Пророчество}
 \begin{itemize*}
-  \item{лекуване на рана - 5 + размер на раната}
-  \item{убиване - 15 + Сила на опонента}
-  \item{зараза - 10}
+  \item{предсказване на удари* - повишава боравене с ръкопашно оръжие - 15}
 \end{itemize*}
 
-
-\vspace{1cm}
-\textbf{Гадание / Пророчество (в пространството и времето)}
+\textbf{Създаване}
 \begin{itemize*}
-  \item{усещане позицията на предмет след докосване, до няколко километра - 5}
-  \item{усещане името на същество - 5}
-  \item{виждане на далеч - 5}
-  \item{светлина - 5}
-  \item{живо оръжие (бoравенето става равно на умението гадаене) - 10}
-  \item{уцелване отвъд прикритие (атака = умение) - 10}
-  \item{виждане през стени - 10}
-  \item{усещане на лъжи - 10}
-  \item{виждане в тъмнина - 10}
-  \item{посока към най-близкия град/път/река - 10}
-  \item{предсказване на удари - +умение към боравене - 15}
+  \item{създаване на шепа монети* - 5}
+  \item{създаване на шепа билки* - хвърля се и билкарство и се взема по-ниския резултат - 5}
+  \item{създаване на механизъм* - хвърля се и механика и се взема по-ниския резултат - 10}
 \end{itemize*}
 
 
-\vspace{1cm}
-\textbf{Огън}
-\begin{itemize*}
-  \item{запалване на много свещи - 5}
-  \item{запалване на дрехи - 5}
-  \item{предпазване от жега - 5}
-  \item{огнено копие - Щ = умение, високи, 10}
-  \item{палене на колиба - 10}
-  \item{запалване на човек - 10}
-  \item{защита от огън - 10}
-  \item{огнено кълбо - <умение> радиус - 15}
-  \item{запалване на тълпа - 15}
-  \item{защито от огън на тълпа, 15}
-  \item{запалване на град - 20}
-  \item{езеро от лава - 20}
-  \item{защита от огън на град - 20}
-\end{itemize*}
+\Tree[ .Метафизика [ .Стихии [ .Вятър ] [ .Огън ] ] [ .Астрология [ .Гадаене ] [ .Пророчество ] ] [ .Демонология [ .Отвъд ]] [ .Медицина [ .Плът ] ] [ .Предмети [ .Създаване ] ] ]
 
-Бъдещи идеи:  \\
-Вятър (Ум)        - мъгла, ниво 2 мълния щяти по Ум, високи.                                         \\
-Форма (Ум)        - превръщане на предмети или същества в други, промяна на показатели и размери     \\
-Отвъд (Ум)        - разговаряне с души, вдигане на мъртви.                                           \\
-Създаване (Ум)    - храна и вода, предмети и създания.                                               \\
-Миъл (Ум)         - отношение и спомени                                                              \\
-Tелепортация (Ум) - пътуване в този и други светове, с товари                                        \\
+%  \item{езеро от лава* - 20}
+%  \item{усещане на лъжи* - 10}
+%  \item{светлина - 5}
+
+%Бъдещи идеи:  \\
+%Форма (Ум)        - превръщане на предмети или същества в други, промяна на показатели и размери     \\
+%Създаване (Ум)    - храна и вода, предмети и създания.                                               \\
+%Миъл (Ум)         - отношение и спомени                                                              \\
+%Tелепортация (Ум) - пътуване в този и други светове, с товари                                        \\
 
 
 %\section{Общуване}
@@ -214,7 +230,10 @@ Tелепортация (Ум) - пътуване в този и други св
 %%- ми нищо не се случва       \\
 
 
+% демонология - джинове, призраци
 
 
-
-
+% молитви
+%  \item{посока към най-близкия град/път/река - 10}
+% неочаквана бъдеща пречка
+% добра идея ли е някое начинание
