[build] Cleaned up the project and fixed the build of all targets.

--- a/latex/modern/items.tex
+++ b/latex/modern/items.tex
@@ -1,13 +1,13 @@
-\section{Предмети}
-\subsection{Валути}
+\chapter{Предмети}
+\section{Валути}
 Абстрактна валута: много евтиn, евтин, среден, скъп, много скъп; няма преобразувания.  \\
 
-\subsection{Надници}
+\section{Надници}
 Приходи за година. Стойностите в скобите не са ликвидни.
 
-\subsection{Сгради}
+\section{Сгради}
 
-\subsection{Оръжия}
+\section{Оръжия}
 \begin{tabular}{p{2cm} | p{2cm} | p{2cm} | p{2cm} | p{2cm} | p{2cm} | p{2cm}}
 Наименование          & Необходима Сила      & Обсег      & Щети       & Свойства       & Маса заредено & Стойност         \\
 % Пистолети
@@ -44,7 +44,7 @@ M16A1                 &                      &            &            &        
 
 \end{tabular}
 
-\subsection{Брони}
+\section{Брони}
 \textbf{Здравина}:
 \begin{itemize}[topsep=-0cm, partopsep=0cm, parsep=0cm, itemsep=0cm]
 \item{Кевларен шлем(2x8) - здравина 8 с/у високоскоростни проектили, покритие 2, евтин предмет, 600гр, релси за скрепяне на уреди.}
