--- a/latex/sci-fi/items.tex
+++ b/latex/sci-fi/items.tex
@@ -1,4 +1,4 @@
-\section{Предмети}
+\chapter{Предмети}
 \subsection{Валути}
 Абстрактна валута: много евтиn, евтин, среден, скъп, много скъп; няма преобразувания.  \\
 
