--- a/latex/sci-fi/skills.tex
+++ b/latex/sci-fi/skills.tex
@@ -1,5 +1,4 @@
-
-\section{Умения}
+\chapter{Умения}
 Означените със звездичка умения са събирателни понятия.
 Например може да се избере \textit{елфически} език или оръжие \textit{брадва} или наука \textit{алхимия}.
 \subsection{Общуване}
