[adventures] Sliapa vrana build output.

--- a/latex/adventures/sliapa_vrana.tex
+++ b/latex/adventures/sliapa_vrana.tex
@@ -6,11 +6,11 @@
 \usepackage[T2A]{fontenc}
 \usepackage[utf8]{inputenc}
 \usepackage[bulgarian]{babel}
-\usepackage{iwona}
+%\usepackage{iwona}
 %\newenvironment{directspeech}{\itshape}{}
 \newcommand{\directspeech}[1]{#1}  % TODO: make this italics.
 \begin{document}
-Сляпа врана
+{\huge Сляпа врана}
 \section{Сър Ленли}
 \directspeech{Докато пътувате за някъде си тъй се случва, че заедно се озовавате по мръкване пред страноприемница с тъпото име "Сляпа врана". Точно пък сега хърбав конник зачуква пергамент до вратата.}
 Самият служител е неразговорлив, така даваме възможност да се научи кои герои могат да четат.
