[fantasy] Added neandertal race ... poorly.

--- a/latex/fantasy/races.tex
+++ b/latex/fantasy/races.tex
@@ -7,9 +7,24 @@
 %За всеки 5 точки по минимуми, расата струва една точка по-малко.  \\
 %\\
 \begin{multicols}{2}
-\race{Човек}{0}
+\race{Homo Sapiens}{0}
 {Доплавали на Ендивал от юг преди 4 века и провъзгласили Каланор и обширната Луседум Терея.}
 {1 - 10}{1 - 10}{1 - 10}{1 - 10}{няма}{няма}
+
+\includegraphics[height=0.25\textheight]{neanderthal1}
+\includegraphics[height=0.25\textheight]{neanderthal2}
+\race{Неандерталец}{1}
+{}
+{1 - 12}{1 - 11}{1 - 10}{1 - 10}
+{няма}
+{
+Каменоделство(С)
+Лов(Л)
+Тичане(Л)
+Копие(Л)
+Промъкване(Л)
+Билкарство(У)
+}
 
 \race{Джудже}{2}
 {Местно население на Ендивал, което след пристигането на хората се разединява на три, а после на четири, кралства.}
