[fantasy] Added a book on the origin of the races. Very incomplete, of course.

--- a/latex/fantasy/items.tex
+++ b/latex/fantasy/items.tex
@@ -6,6 +6,36 @@
 Сзал Тлея: 13 тъмни монети = 1 черна монета; 900 черни монети = 1 дълбока монета       \\
 Креол: 1900 монети за храна = 1 монета за оръжие; 69 монети за оръжие = 1 монета за дом
 
+
+\section{Книги}
+\subsection{Хора и зверове}
+Език: Старобурхски  \\ 
+Автор: Саздъм Дегре  \\
+Описва създаването на расите.  \\  
+% exist, create, create
+\Tree[ .{Хазерот + Нейтунде} [ .Върколаци [ .Бурхи ] ] ]
+% exist, create, planned evolution, create, planned evolution, evolution
+\Tree[ .Громир [ .Силиций [ .Дружета ] ] [ .Желязо [ .Гоблини [ .Орки ] ] ] ]
+% exist, create, evolve, create, create
+\Tree[ .Спиноза [ .Елфи [ .Даенлини ] [ .Човеци [ .Неандерталци ] ] ] ]
+% exist, create ... 
+\Tree[ .Вампе [ .Здрачници ] ]
+\Tree[ .Скитхе [ .Немъртви ] ]
+\Tree[ .Демони [ .Ниоги ] ]
+\Tree[ .Дракони [ .Драконити ] ]
+
+
+\subsection{Causae et Curae}
+Страници: 269
+латински
+Hildegard von Bingen
+
+De Re Militari
+Publius Flavius Vegetius Renatus
+латиски, английски
+
+
+
 \section{Надници}
 Приходи за година. Стойностите в скобите не са ликвидни.
 крепостен селянин
