--- a/latex/fantasy/skills.tex
+++ b/latex/fantasy/skills.tex
@@ -179,6 +179,13 @@
 \end{itemize*}
 
 
+%Призоваване на природни същества
+
+%Призоваване на демони
+
+%Създаване на същества
+
+
 \Tree[ .Метафизика [ .Стихии [ .Вятър ] [ .Огън ] ] [ .Астрология [ .Гадаене ] [ .Пророчество ] ] [ .Демонология [ .Отвъд ]] [ .Медицина [ .Плът ] ] [ .Предмети [ .Създаване ] ] ]
 
 %  \item{езеро от лава* - 20}
