[rules] Communication system revised. Charisma renamed back to Charms.

--- a/latex/fantasy/skills.tex
+++ b/latex/fantasy/skills.tex
@@ -199,14 +199,45 @@
 %Tелепортация (Ум) - пътуване в този и други светове, с товари                                        \\
 
 
-%\section{Общуване}
-%Лъжене (Харизма)                  \\
-%Сплашване (Харизма)               \\
-%Изтезаване/Разпитване (Харизма)   \\
-%Емпатия (Харизма)                 \\
-%Четене по устните (Харизма)       \\
-%Просене (Харизма)                  \\
-%
+\section{Общуване}
+Заявява се търсен ефект и се хвърля 'умение + d* с/у Ум на целта'.
+При успех, целта е длъжда да реагира.
+Заявеният желан ефект показва само посоката на реакция на целта.
+Разликата от хвърлянето определя размера на реакцията.
+Характера на целта определя в какво тя ще се изрази.
+%\par
+%\vspace{0.3cm}
+\begin{itemize}
+\item{Емпатия
+Целта е да бъдат разгадани подбуждащите мотиви на целта.}
+
+\item{Заплаха
+Целта е заплашеният да извърши услуга, без значение какво е мнението му за заплашващият след това.}
+
+\item{Лъжа
+Целта е излъганият да повярва в твърдение.}
+
+\item{Молба
+Целта е помоленият да извърши услуга, без да си разваля много мнението за молещият.}
+
+\item{Подигравка
+Целта е подиграният да изгуби уважението на връстниците си.}
+
+\item{Провокация
+С елегантна подигравка или вулгарни псувни, опонентът бива афектиран и така действа емоционално.
+Някои чести цели на провокация са проява на физическо насилие, нарушаване на клетва или неприемливо повишаване на тон.}
+
+\item{Разпит
+Целта е някой да издаде информация неволно.}
+
+\item{Сделка
+Целта е някой да приеме дадени условия, без след това да се чувства измамен.}
+
+\item{Флирт
+Целта е някой от другия пол да повиши мнението си за флиртуващият.}
+
+\end{itemize}
+
 %\section{Академични}
 %Език(Ум) - староендивалски, гоблински, северно върколажко кралство и т.н.  \\
 %Наука(Ум) - алхимия, астрономия, геометрия, оптика и т.н.  \\
