--- a/latex/rules/character.tex
+++ b/latex/rules/character.tex
@@ -27,7 +27,7 @@
 \item {\bfСила} – щети в ръкопшен бой, мъкнене на багаж, носене на тежка пушка, тичане, оцеляване след рана
 \item {\bfЛовкост} – нападение, париране, отключване, промъкване, забелязване
 \item {\bfУм} – магия, компютри, брой умения
-\item {\bfХаризма} – преговаряне, усещне на лъжи, изтезаване
+\item {\bfЧар} – първоначално впечатление
 \end{itemize*}
 
 
