[fantasy] An awkward attempmpt at introducing politics, social structure and commerse.

--- a/latex/preamble.tex
+++ b/latex/preamble.tex
@@ -102,3 +102,22 @@
 \end{multicols}
 }
 
+% TODO: see in Wikipedia how is it correctly done.
+\newcommand{\country}[8]
+{
+  \noindent Име: \textbf{#1} \\
+  История: #2  \\
+  Управление: #3  \\
+  Площ: #4  \\
+  Столицa: #5  \\
+  Език: #6  \\
+  Демогрфия: #6  \\
+  Нселение: #7  \\
+  Добив: #8  \\
+%  Износ: #9 \\
+%  Внос: #10  \\
+}
+% geography
+% sociology
+% industry and trade
+% hystory
