[files] 'charsheet' now official abbreviation everywhere.

--- a/latex/rules/charsheet.tex
+++ b/latex/rules/charsheet.tex
@@ -136,7 +136,7 @@
 \end{tabular}
 
 \begin{multicols}{2}
-\extrarowsep=3cm
+\extrarowsep=2.5cm
 \noindent
 \begin{tabular}{|p{0.48\textwidth}|}
 \hline
@@ -146,9 +146,11 @@
 \hline
 {\tiny Зрялост}  \\
 \hline
+{\tiny Смърт и последвали събития}  \\
+\hline
 \end{tabular}
 
-\extrarowsep=10cm
+\extrarowsep=11.5cm
 \noindent
 \begin{tabular}{|p{0.48\textwidth}|}
 \hline
@@ -188,7 +190,7 @@
 \end{tabular}
 \end{tiny}
 
-\extrarowsep=13cm
+\extrarowsep=12cm
 \noindent
 \begin{tabular}{|p{6cm}|}
 \hline
