[chrsheet] Compcted the Carry and Movement table.

--- a/latex/rules/character.tex
+++ b/latex/rules/character.tex
@@ -58,14 +58,17 @@
 
 \section{Носене}
 \rowcolors{1}{white}{lightgray}
-\begin{tabular}{l | l | l | l }
-Максимален товар, кг & Придвижване, м/ход       & Модификация  \\
-Сила                 & Сила + Ловкост + Ловкост & 0            \\
-Сила * 2             & Сила + Ловкост           & 0            \\
-Сила * 5             & Сила                     & -5
+\begin{tabular}{p{1.4cm} | p{1.4cm} | p{1.4cm} | p{1.4cm}}
+Максимален товар, кг & Тичне, м/ход & Ходене, км/ден & Модификация  \\
+C                    & С+Л+Л        & 2С+10Л         & -            \\
+2C                   & С+Л          & 3С+3Л          & -            \\
+5C                   & С            & 5С             & -5
 \end{tabular}
 \\
 Очевидно хвърлянето на раницата преди битка е добра идея, както и язденето на дълги разстояния.
+
+% \section{Промяна}
+% нов персонажен лист за всяко израстване на героя.
 
 
 \section{Предмети}
