--- a/latex/rules/charsheet.tex
+++ b/latex/rules/charsheet.tex
@@ -114,11 +114,11 @@
 \vspace{0.3cm}
 \noindent
 \rowcolors{1}{white}{lightgray}
-\begin{tabular}[b]{l | l | l | l }
-Максимален товар, кг & Придвижване, м/ход       & Модификация  \\
-Сила                 & Сила + Ловкост + Ловкост & 0            \\
-Сила * 2             & Сила + Ловкост           & 0            \\
-Сила * 5             & Сила                     & -5
+\begin{tabular}{p{1.4cm} | p{1.4cm} | p{1.4cm} | p{1.4cm}}
+Максимален товар, кг & Тичне, м/ход & Ходене, км/ден & Модификация  \\
+C                    & С+Л+Л        & 2С+10Л         & -            \\
+2C                   & С+Л          & 3С+3Л          & -            \\
+5C                   & С            & 5С             & -5
 \end{tabular}
 \end{footnotesize}
 \end{multicols}
