[charsheet] Page numbering supressed.

--- a/latex/rules/charsheet.tex
+++ b/latex/rules/charsheet.tex
@@ -13,7 +13,9 @@
 \usepackage[table]{xcolor}     % For coloured rows within tables.
 \usepackage[margin=1cm]{geometry}
 
+% Hide section and page numbers.
 \renewcommand\thesection{}
+\pagenumbering{gobble}
 
 \begin{document}
 % page 0: Body
@@ -150,7 +152,7 @@ C                    & С+Л+Л        & 2С+10Л         & -            \\
 \hline
 \end{tabular}
 
-\extrarowsep=11.5cm
+\extrarowsep=11.3cm
 \noindent
 \begin{tabular}{|p{0.48\textwidth}|}
 \hline
