[charsheet] Manual realignment of columns. Ugly.

--- a/latex/rules/charsheet.tex
+++ b/latex/rules/charsheet.tex
@@ -75,9 +75,11 @@
 \end{tabular}
 \end{multicols}
 
+\vskip 2cm
+
 \begin{footnotesize}
 \extrarowsep=0cm
-\noindent
+\hskip 4cm
 \rowcolors{1}{white}{lightgray}
 \begin{tabular}[b]{l | c | c | c}
 Сила    & ниски & средни & високи  \\
@@ -115,6 +117,7 @@
 
 \vspace{0.3cm}
 \noindent
+\hskip 2.3cm
 \rowcolors{1}{white}{lightgray}
 \begin{tabular}{p{1.4cm} | p{1.4cm} | p{1.4cm} | p{1.4cm}}
 Максимален товар, кг & Тичне, м/ход & Ходене, км/ден & Модификация  \\
@@ -195,6 +198,7 @@ C                    & С+Л+Л        & 2С+10Л         & -            \\
 
 \extrarowsep=12cm
 \noindent
+\hskip 3.45cm
 \begin{tabular}{|p{6cm}|}
 \hline
 {\tiny Умения}  \\
