[fantasy] New aquatic race: lamonts.

--- a/latex/fantasy/races.tex
+++ b/latex/fantasy/races.tex
@@ -18,11 +18,11 @@
 {1 - 12}{1 - 11}{1 - 10}{1 - 10}
 {няма}
 {
-Каменоделство(С)
-Лов(Л)
-Тичане(Л)
-Копие(Л)
-Промъкване(Л)
+Каменоделство(С);
+Лов(Л);
+Тичане(Л);
+Копие(Л);
+Промъкване(Л);
 Билкарство(У)
 }
 
@@ -88,16 +88,18 @@
 Език на немъртвите(У)
 }
 
-\race{Ниог}{5}
+\race{Ниог}{3}
 {Тези антропоморфни птици владеят сръчно телекинеза.
 Живеят в технологични планински градове.
 Са поколението на експедиция до Ендивал, която не успяла да се завърне.}
 {1-6}{1-10}{1-14}{1-10}
 {
-Реене (може да планира по вятъра или да се издига от топли течения)
-Отлитане (може да отлита и каца верикално)
-Телекинеза (може да манипулира предмети до (Ум) метра със силата на една ръка и Ловкост 1)
-Телекинетична сръчност (хаптична обратна връзка, както и фин контрол върху движенията)
+Реене (може да планира по вятъра или да се издига от топли течения);
+Отлитане (може да отлита и каца верикално);
+Телекинеза (може да манипулира предмети до (Ум) метра със силата на една ръка и Ловкост 1);
+Телекинетична сръчност (хаптична обратна връзка, както и фин контрол върху движенията);
+Липса на лява ръка;
+Липса на дясна ръка
 }
 {
 Староендивалски език(У);
@@ -143,7 +145,7 @@
 Манюто им включва малки количества сяра и фосфор (няколко щипки на ден).}
 {5-13}{1-10}{2-13}{1-10}
 {
-Неуязвимост от огън
+Неуязвимост от огън;
 Нестареещ
 }
 {
@@ -153,5 +155,27 @@
 Двуръчен меч(Л);
 Древни легенди(У)
 }
+
+
+\race{Ламонт}{1}
+{Ламонтите са човекоподобни амфибии с хилядолетна култура.
+Бидейки миролюбиви и предпазливи по характер, не пречи ловни дружини от ламонти понякога да преценят крайбрежни селища като 'плячка' и да нападнат преди изгрев.
+На външен вид са високи и стройни със синкава кожа, ципести очи и плешиви.
+Имат подобни на крила израстъци, които им позволяват да плуват с голяма скорост и маневреност, запазвайки ръцете си свободни през това време.}
+{3-9}{1-8}{1-10}{1-8}
+{
+Виждане в тъмнина;
+Водни крила;
+Дишане под вода;
+Нужда от много вода - няколко пъти повече от човек на ден
+}
+{
+Плуване(С);
+Ориентирне по небето(У);
+Копие(У);
+Арбалет(Харпун)(Л);
+Древни легенди(У)
+}
+
 
 \end{multicols}
