[perks] Added luck.

--- a/latex/fantasy/skills.tex
+++ b/latex/fantasy/skills.tex
@@ -48,7 +48,7 @@
 \item{Старовърколашки}
 \item{Старобурхски}
 \item{Бурхски}
-\item{Третски - общ език между нежду наемници и други паравоенни организации из Ендивал}
+\item{Третски - общ език между наемници и други паравоенни организации из Ендивал}
 \end{itemize}
 \Tree[ .Старовърколашки [ .Старобурхски [ .Бурхски [ .Третски ] ] ] [ .Грефрамски [ .Фелтеарски ] [ .Лиднарски ] [ .Креолски ] [ .Грефкраски ]  ] ]
 
