--- a/latex/rules/perks.tex
+++ b/latex/rules/perks.tex
@@ -2,21 +2,21 @@
 
 \textbf{Положителни}
 \begin{itemize*}
-\item{Виждане в тъмнина}
-\item{Съюзник - съюзник, влиятелна личност или организация, което дължи услуги на персоанжа}
-\item{Нестареещ - не заплашван от старост иили изтичане на дните}
+\item{Виждане в пълна тъмнина}
+\item{Съюзник - влиятелна личност или организация, което дължи услуги на персоанжа}
+\item{Нестареещ - не заплашван от и изтичане на дните}
 \item{Заможен - започваш допълнително с един скъп предмет}
 \item{Общуване с животни}
-\item{Кристален слух}
+\item{Кристален слу - чуваш 10 пъти по-далеч}
+\item{Късмет - веднъж на сесия, играчът може да хвърли зар; ако се падно положително, случва се на героят му нещо хубаво; иначе - на врага нещо лошо}
 \end{itemize*}
 
 \vspace{0.7cm}
 \textbf{Отрицателни}
 \begin{itemize*}
-\item{куцане (1/4 скорост)}
+\item{куцане - 1/4 скорост}
 \item{слаб слух}
 \item{нелогичен панически страх от паяци/змии/широки отркити пространства/тесни затворени пространства/височини}
-\item{късогледство/далекогледство}
 \item{нелогично неустоимо приличане към огън/силно психоактивно вещество/сексъално към деца/изричане на лъжи/физически конфликт}
 \item{обезобразено лице}
 \item{малодушие}
@@ -28,10 +28,11 @@
 \item{крайна срамежливост}
 \item{крайна самоувереност}
 \item{краен песимизъм}
-\item{наднормено тегло}
+\item{дебел - 1/4 скорост}
 \item{Враг - индивид или организация, готови да отделят ресутрси само за да навредят на персонажа}
 \item{Беден - започваш само с дрехи}
 \item{Кръвожадност}
 \item{Късогледство/Далекогледство - -10 наблюдателност и боравене на далеч/близо}
+\item{Нещастие}
 \end{itemize*}
 
